.provarCaches/00D6C0000000xA6UAI/objects/sked__Async_Job__c.object
<CustomObject>
    <fields>
        <fullName>sked__Message__c</fullName>
        <label>Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Param__c</fullName>
        <label>Param</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Status__c</fullName>
        <defaultValue>&apos;Pending&apos;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Geolocation Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Async Job</label>
    <listViews>
        <fullName>sked__All</fullName>
        <columns>NAME</columns>
        <columns>sked__Status__c</columns>
        <columns>sked__Type__c</columns>
        <columns>sked__Param__c</columns>
        <columns>sked__Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AJ-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>